kubernetes/pxeboot/bootimus/bootimus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bootimus-kubevip
  namespace: pxeboot
spec:
  selector:
    app.kubernetes.io/name: bootimus
  loadBalancerClass: kube-vip.io/kube-vip-class
  type: LoadBalancer
  loadBalancerIP: 10.10.10.43
  ports:
  - name: tftp
    protocol: UDP
    port: 69
    targetPort: tftp
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
  - name: webui
    protocol: TCP
    port: 8081
    targetPort: webui
---
apiVersion: v1
kind: Service
metadata:
  name: bootimus-traefik
  namespace: pxeboot
spec:
  selector:
    app.kubernetes.io/name: bootimus
  ports:
    - name: webui
      protocol: TCP
      port: 8081
      targetPort: webui
