kubernetes/pxeboot/bootimus/bootimus-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bootimus-traefik
  namespace: pxeboot
spec:
  ingressClassName: traefik
  entryPoints:
    - websecure
  routes:
    - match: Host(`bootimus.kubernetes.timo.be`) || Host(`bootimus.timo.be`)
      kind: Rule
      services:
        - name: bootimus-traefik
          port: 8081
      middlewares:
        - name: auth
          namespace: traefik
